<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.ConversationListActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_manage_participants"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/done" />

    <LinearLayout
        android:id="@+id/details_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_manage_participants"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/conversation_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/conversation_name"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/conversation_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <TextView
        android:id="@+id/participants_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/details_layout"
        android:layout_margin="10dp"
        android:text="@string/add_participants"
        android:textColor="@color/colorPrimary" />

    <LinearLayout
        android:id="@+id/add_participants"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/participants_text"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/add_participants_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textColor="@android:color/black"
            android:hint="@string/participant_profile_id" />

        <Button
            android:id="@+id/add_participants_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/done_button"
        android:layout_below="@id/add_participants"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="50dp">

        <ListView
            android:id="@+id/list_of_participants"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="1dp"
            android:divider="@color/colorAccent"
            android:listSelector="@android:color/transparent"/>

        <ViewStub
            android:id="@android:id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout="@layout/empty_list_participants" />

        <include
            android:id="@+id/overlay"
            layout="@layout/wait_overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

    </FrameLayout>

</RelativeLayout>